# devarmory-appimages-manage

./: .appimages-checksums.md5.txt  .appimages-checksums.sha1.txt  .appimages-checksums.sha256.txt  .appimages-checksums.sha512.txt  .gitignore  Taskfile.yml  appsindex.json  main.py  package.json  pyproject.toml
procedures/: Taskfile.yml  inspect-appimage-checksums.sh  make-appimage-checksums.sh
prototyping/: json-appindex-playground.ipynb
resources/: app.template.json  shortcut-template-desktop.js
